搜索：完成 Java J2 中文全文检索
